Fix visibility of cart summary title on mobile

--- a/view/frontend/app/src/cart/components/_CartSummary.scss
+++ b/view/frontend/app/src/cart/components/_CartSummary.scss
@@ -2,6 +2,7 @@
   .summary.title {
     @media only screen and (max-width: 767px) {
       padding: 0 15px;
+      display: inline-block;
     }
   }
 }
